[package]
name = "serdendian"
description = "A minimalistic way to serialize/deserialize endian metadata"
version = "0.2.0"
authors = ["RosieTheGhostie"]
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = []
full = ["byte_stream"]

byte_stream = []
